# vyrn

./: .gitignore  README.md  ROADMAP.md
.claude/: launch.json
.github/workflows/: ci.yml
bench/: baseline.json
compiler/: Cargo.toml  README.md
compiler/vela-cli/: Cargo.toml
compiler/vela-cli/src/: main.rs  remote.rs
compiler/vela-cli/tests/: client_build.rs  parity.rs  project.rs  rpc_serve.rs  serve.rs  testing.rs
compiler/vela-codegen/: Cargo.toml
compiler/vela-codegen-llvm/: Cargo.toml  build.rs
compiler/vela-codegen-llvm/.cargo/: config.toml
compiler/vela-codegen/src/: lib.rs
compiler/vela-frontend/src/: ast.rs  checker.rs  consteval.rs  diagnostics.rs  interp.rs  lexer.rs  lib.rs  loader.rs  movecheck.rs  own.rs  parser.rs  regex.rs  schema.rs  symbols.rs  types.rs
compiler/vela-frontend/tests/: diagnostics_api.rs  symbols_api.rs
compiler/vela-lsp/: Cargo.toml
compiler/vela-lsp/src/: main.rs
compiler/vela-lsp/tests/: lsp_e2e.rs
compiler/vyrn-cli/: Cargo.toml
compiler/vyrn-cli/src/: main.rs  remote.rs
compiler/vyrn-cli/tests/: benching.rs  codequotes.rs  doc.rs  exports.rs  fmt.rs  i18n.rs  json.rs  pages.rs  parity.rs  project.rs  rpc.rs  serve.rs  testing.rs  tw.rs  universal_pages.rs  vyx.rs
compiler/vyrn-codegen/: Cargo.toml
compiler/vyrn-codegen-llvm/: Cargo.toml
compiler/vyrn-codegen-llvm/.cargo/: config.toml
compiler/vyrn-codegen-llvm/.llvm-stublib/: xml2s.lib
compiler/vyrn-codegen-llvm/src/: lib.rs
compiler/vyrn-codegen/src/: lib.rs
compiler/vyrn-frontend/: Cargo.toml
compiler/vyrn-frontend/src/: ast.rs  checker.rs  codec.rs  consteval.rs  diagnostics.rs  finite.rs  fmt.rs  hash.rs  interp.rs  lexer.rs  lib.rs  loader.rs  movecheck.rs  origin.rs  own.rs  parser.rs  regex.rs  schema.rs  schema_reflect.rs  symbols.rs  types.rs
compiler/vyrn-frontend/tests/: corpus_fmt.rs  diagnostics_api.rs  symbols_api.rs
compiler/vyrn-lsp/: Cargo.toml
compiler/vyrn-lsp/src/: main.rs  templates.rs
compiler/vyrn-lsp/tests/: lsp_e2e.rs
docs/api/: index.md
docs/api/std/: args.md  arrays.md  bench.md  connect.md  graphql.md  hash.md  html.md  i18n.md  json.md  math.md  openapi.md  random.md  rpc.md  scan.md  storage.md  strings.md  time.md  tw.md  ui.md  vyx.md
editor/vscode/: .vscodeignore  LICENSE  README.md  extension.js  package-lock.json  package.json  vela.tmLanguage.json  vyrn.tmLanguage.json  vyx.tmLanguage.json
editor/vscode/scripts/: make-vsix.mjs
editor/vscode/snippets/: vela.json  vyrn.json
examples/: args.vyrn  argsdemo.args  argsdemo.vyrn  arrays.vela  arrays.vyrn  autorelease.vela  autovalidate.vela  autovalidate.vyrn  benching.vyrn  bits.vyrn  bool.vela  bounded.vela  bytecount.vyrn  cellstore.vela  clock.vyrn  closures2.vyrn  concurrency.vela  concurrency.vyrn  consume.vela  controlflow.vyrn  convert.vela  crossfield.vela  domdemo.vyrn  dynarray.vela  dynstring.vela  ecs.vela  ecs.vyrn  encoding.vela  encoding.vyrn  encodings.vela  enum.vela  enum.vyrn  enumarray.vyrn  enumcodec.vyrn  eventloop.vela  eventloop.vyrn  externdemo.vyrn  externdemo2.vyrn  fallible.vela  fib.vela  (+107 more)
examples/data/: greeting.txt  palette.csv
examples/data/themes/: dark.txt  light.txt
examples/fullstack/: api.vyrn  client.vyrn  server.vyrn  vyrn.json
examples/fullstack/components/: App.vyx  IssuePanel.vyx  Roundtrip.vyx  Section.vyx
examples/fullstack/pages/: index.vyrn
examples/fullstack/public/: app.js  index.html  style.css
examples/lib/: gen_palette.vyrn  mathutil.vela  mathutil.vyrn  metrics.vyrn  shapes.vyrn
examples/locales/: en.json  uk.json
examples/pages/: index.vyrn
examples/pages/items/: [id].vyrn  index.vyrn
examples/pages/users/: [id].vyrn
examples/rpcsplit/: contract.vyrn  store.vyrn  wire.vyrn
examples/shelf/: client.vyrn  contract.vyrn  server.vyrn  store.vyrn  strings_gen.vyrn  theme.json  types.vyrn  util.vyrn  view.vyrn  vyrn.json  wire.vyrn
examples/shelf/public/: app.js  style.css
examples/shelf/routes/: about.vyrn  error.vyx  index.vyrn  layout.vyx
examples/shelf/routes/books/: [id].vyrn
examples/shelf/strings/: en.json  uk.json
examples/shelf/widgets/: AddForm.vyx  BookCard.vyx  BookRow.vyx  ShelfApp.vyx  TagItem.vyx
examples/statemod/: left.vyrn  right.vyrn  store.vyrn  trace.vyrn
examples/twdemo/: theme.json
examples/vyxcomp/: Listing.vyx  Panel.vyx  Row.vyx  models.vyrn
examples/vyxdomcomp/: Counter.vyx  Rows.vyx
rfcs/: NOTES-dogfood-bin.md  NOTES-dogfood-shelf.md  NOTES-dogfood-vlog.md  README.md  RFC-0001-vision.md  RFC-0002-type-system.md  RFC-0003-validated-types.md  RFC-0004-capabilities-and-memory.md  RFC-0005-error-handling.md  RFC-0006-diagnostics.md  RFC-0007-string-templates.md  RFC-0008-logging.md  RFC-0009-error-model.md  RFC-0010-modules.md  RFC-0011-array-mutation.md  RFC-0012-js-interop.md  RFC-0013-module-state-event-loop.md  RFC-0014-input-io.md  RFC-0015-testing.md  RFC-0016-server.md  RFC-0017-formatter.md  RFC-0018-json-codec.md  RFC-0019-rpc.md  RFC-0020-i18n.md  RFC-0021-generator-imports.md  RFC-0022-ergonomics.md  RFC-0023-function-values.md  RFC-0024-enums-on-the-wire.md  RFC-0025-worker-threads.md  RFC-0026-ui.md  RFC-0027-import-namespace.md  RFC-0028-map.md  RFC-0029-module-state.md  RFC-0030-if-expression.md  RFC-0031-interface-closure.md  RFC-0032-tw.md  RFC-0033-origin-maps.md  RFC-0034-soft-navigation.md  RFC-0035-patch-protocol.md  RFC-0036-vyx-tw.md  (+33 more)
std/: args.vyrn  arrays.vyrn  bench.vyrn  connect.vyrn  graphql.vyrn  hash.vyrn  html.vyrn  i18n.vyrn  json.vyrn  math.vela  math.vyrn  openapi.vyrn  random.vyrn  rpc.vyrn  scan.vyrn  storage.vyrn  strings.vela  strings.vyrn  time.vyrn  tw.vyrn  ui.vyrn  vyx.vyrn
web/: README.md  build.ps1  domdemo.html  eventloop.html  externdemo.html  index.html  navdemo-detail.html  navdemo.html  navdemo.js  vyrn-dom.js  vyrn-nav.js  vyrn-query.js  vyrn-rpc.js  vyxdomdemo.html  wasi-min.js
(+1 files in other folders)
