# Vyrn compiler workspace.
#
# Default members build with ZERO external dependencies, so `cargo build` and
# `cargo test` work today without LLVM installed:
#   - vyrn-frontend : lexer + parser + AST + type checker + tree-walking interpreter
#   - vyrn-codegen  : emits textual LLVM IR (feed to `clang`/`llc` once LLVM is installed)
#   - vyrn-cli      : the `vyrn` driver
#
# The Inkwell (LLVM C++ API) backend lives in the EXCLUDED crate
# `vyrn-codegen-llvm`. It requires a matching LLVM toolchain to build and is not
# part of the default resolve. See compiler/README.md.
#
# `vyrn-lsp` (the Language Server Protocol server) is also EXCLUDED: it pulls in
# `lsp-server`/`lsp-types`, which would break the zero-external-dependency
# property of the default resolve. Build it explicitly:
#   cargo build --manifest-path compiler/vyrn-lsp/Cargo.toml

[workspace]
resolver = "2"
members = [
    "vyrn-frontend",
    "vyrn-codegen",
    "vyrn-cli",
]
exclude = [
    "vyrn-codegen-llvm",
    "vyrn-lsp",
]

[profile.release]
opt-level = 3
