[package]
name = "vela-cli"
version = "0.0.0"
edition = "2021"
description = "The velac driver: check, run (interpret), or emit LLVM IR for a .vela file."

[dependencies]
vela-frontend = { path = "../vela-frontend" }
vela-codegen = { path = "../vela-codegen" }

[[bin]]
name = "velac"
path = "src/main.rs"
