[package]
name = "vyrn-cli"
version = "0.0.0"
edition = "2021"
description = "The vyrn driver: check, run (interpret), or emit LLVM IR for a .vyrn file."

[dependencies]
vyrn-frontend = { path = "../vyrn-frontend" }
vyrn-codegen = { path = "../vyrn-codegen" }

[[bin]]
name = "vyrn"
path = "src/main.rs"
